# GeotiffReader

./: .gitignore  CMakeLists.txt  makefile  makefile.keep
example/: application.cpp  application.hpp
inc/: application.hpp  connection_type.hpp  elevation.hpp  geo_pixel.hpp  geo_point.hpp  geotiff.hpp  geotiff_receiver.hpp  image_size.hpp  pixel_size.hpp
inc/base/: argument_base.hpp  cmd_argument.hpp  system.hpp
inc/geotiff_reader/: elevation.hpp  reader.hpp
inc/geotiff_structures/: geo_pixel.hpp  geo_point.hpp  image_size.hpp  pixel_size.hpp
inc/geotiff_types/: connection_type.hpp  geo_exception.hpp  geo_pixel.hpp  geo_point.hpp  image_size.hpp  pixel_size.hpp
inc/remote/: connection_type.hpp  geotiff_receiver.hpp
inc/utils/: log.hpp  query.hpp
src/: application.cpp  elevation.cpp  geo_point.cpp  geotiff.cpp  geotiff_receiver.cpp  main.cpp
src/base/: cmd_argument.cpp  system.cpp
src/geotiff_reader/: elevation.cpp  reader.cpp
src/geotiff_structures/: geo_point.cpp
src/geotiff_types/: geotypes.cpp
src/remote/: geotiff_receiver.cpp
src/utils/: log.cpp  query.cpp
test/: position_reader.py  test.cpp  test.hpp
test/scripts/: airmap_receiver.py  geopoint.py  position_reader.py
